fix: Resolve scrollbar visibility issue when opening and closing modal

--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,5 @@
 
 .no-scroll {
   overflow: hidden;
+  padding: 0 5px 0 0;
 }
